--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,22 @@
   --white: #ffffff;
   --balck: #000;
   --gray: #f4f4f4;
-  --h1: 1.25rem;
-  --h2: 1.2rem;
-  --h3: 1.15rem;
-  --p: 1rem;
+  --sh1: 1.5rem;
+  --sh2: 1.3rem;
+  --sh3: 1.1rem;
+  --sp: 1rem;
+  --sh4: 0.8rem;
+}
+main {
+  /* font-size: 0; */
 }
 
 body {
   font-family: Raleway, sans-serif;
+  /* margin: 0; */
 }
 
 .container {
-  max-width: 1600px;
   margin: 0 auto;
 }
 
@@ -37,19 +41,18 @@ body {
 }
 
 .header-img-text {
-  /* width: 95%; */
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .header-img-text h1 {
-  font-size: var(--h1);
+  font-size: var(--sh1);
   font-weight: 300;
   color: var(--white);
 }
 .header-img-text h3 {
-  font-size: var(--h3);
+  font-size: var(--sh3);
   margin-top: 2em;
   font-weight: 200;
   color: var(--white);
@@ -78,30 +81,30 @@ body {
   margin: 0 auto;
 }
 .mountain p {
-  font-size: var(--p);
+  font-size: var(--sh2);
   text-align: center;
-  padding: 1.5em;
+  padding: 1em;
 }
 
 /* Services */
 
 .services {
   background-color: var(--gray);
-  padding: 1em;
 }
 .services-header {
   text-align: center;
-  padding: 3em 0;
+  padding: 3em 1em;
 }
 .services-img {
   width: 65px;
 }
 .services h2 {
-  font-size: var(--h2);
+  font-size: var(--sh2);
   padding: 0.3em;
 }
 .services p {
-  font-size: var(--p);
+  font-size: var(--sp);
+  
 }
 
 /* service */
@@ -123,7 +126,7 @@ body {
   width: 280px;
   height: 300px;
   padding: 2em;
-  margin:.3em;
+  margin: 0.3em;
   background-color: var(--white);
 }
 .service-card > * {
@@ -132,14 +135,15 @@ body {
 .service-img {
   width: 60px;
 }
-.img-smale {
+.img-small {
   width: 40px;
 }
-.service h3 {
-  font-size: var(--h3);
+.service-card h3 {
+  font-size: var(--sh3);
+  text-transform: uppercase;
 }
-.service p {
-  font-size: var(--p);
+.service-card p {
+  font-size: var(--sp);
 }
 
 .service-stats {
@@ -149,7 +153,7 @@ body {
   background-color: var(--white);
 }
 .service-stats p {
-  font-size: var(--p);
+  font-size: var(--sp);
   font-weight: 400;
   padding: 0.3em;
 }
@@ -175,14 +179,151 @@ body {
   width: 95%;
 }
 
-/* Example */
+/* Records */
 
-.example {
+.records {
+  background-color: var(--balck);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  /* padding: .5em; */
 }
-.example-container {
+.records-container {
+  background-color: var(--white);
+  height: 55px;
+  width: 120px;
+  margin: 0.8em;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
 }
-.example p {
-  font-size: var(--p);
+.records-container h4 {
+  font-size: var(--sh4);
+}
+.records h4:nth-of-type(2) {
+  font-weight: 500;
+}
+.records p {
+  font-size: var(--sp);
+}
+
+/* Protfolio */
+
+
+.protfolio-header {
+  margin: 2em;
+}
+.protfolio-head-img {
+  display: block;
+  margin: 1em auto;
+  width: 65px;
+}
+.protfolio h2 {
+  font-size: var(--sh2);
+  text-align: center;
+}
+.protfolio p {
+  text-align: center;
+  font-size: var(--sp);
+}
+.protfolio-caregory-container {
+  display: flex;
+  flex-direction: column;
+  margin: 1em;
+}
+.protfolio-caregory > * {
+  text-align: center;
+  padding: 0.3em;
+  margin: 0.7em;
+  border-top: 1px dotted #000;
+  border-bottom: 1px dotted #000;
+}
+.protfolio-caregory h3 {
+  font-size: var(--sh3);
+}
+.protfolio-caregory-img {
+  width: 65px;
+  display: block;
+  margin: 0 auto;
+}
+.portfolio-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+.protfolio-img {
+  width: 20%;
+  height: 200px;
+  object-fit: cover;
+}
+.protfolio a {
+  display: block;
+  margin: 2em auto;
+  max-width: 200px;
+  font-weight: 500;
+  padding: 0.6em;
+  text-decoration: none;
+  background-color: var(--yellow);
+  color: var(--balck);
+  text-align: center;
+}
+
+/* view */
+
+.view {
+    position: relative;
+    margin: 0 0 2em;
+}
+.view-img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.view-text {
+  display: block;
+  max-width: 200px;
+  font-weight: 500;
+  padding: 0.6em;
+  text-decoration: none;
+  background-color: var(--yellow);
+  color: var(--balck);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Team */
+.team {
+    text-align: center;
+    padding: 1.5em;
+}
+.team-header {
+    margin: 1.5em;
+}
+.team-img {
+    width: 65px;
+}
+.team-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+}
+.team-card {
+    width: 300px;
+    margin: 1em;
+}
+.team-card-img {
+}
+.team-card-img img {
+    width: 250px;
+    border-radius: 3px;
+}
+
+.team-card-img h3 {
+    
 }
 
 
@@ -192,13 +333,24 @@ body {
 
 
 
+@media screen and (min-width: 600px) {
+  .service-card {
+    width: 300px;
+  }
+  .service-stats {
+    width: 300px;
+    background-color: var(--white);
+  }
 
-@media screen and (min-width: 600px){
-    .service-card {
-        width: 300px;
-      }
-      .service-stats {
-        width: 300px;
-        background-color: var(--white);
-      }
+  .protfolio-caregory-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .protfolio-caregory {
+    display: flex;
+  }
+  .protfolio-caregory-img {
+    margin: 0;
+  }
 }
